Port over the binary search (minus the indexed and Arrow stuff) from my `arrow-playground`